; ModuleID = '/home/carl/AnghaBench/linux/fs/btrfs/extr_xattr.c_btrfs_xattr_handler_set.c'
source_filename = "/home/carl/AnghaBench/linux/fs/btrfs/extr_xattr.c_btrfs_xattr_handler_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xattr_handler = type { i32 }
%struct.dentry = type { i32 }
%struct.inode = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xattr_handler*, %struct.dentry*, %struct.inode*, i8*, i8*, i64, i32)* @btrfs_xattr_handler_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @btrfs_xattr_handler_set(%struct.xattr_handler* %0, %struct.dentry* %1, %struct.inode* %2, i8* %3, i8* %4, i64 %5, i32 %6) #0 {
  %8 = alloca %struct.xattr_handler*, align 8
  %9 = alloca %struct.dentry*, align 8
  %10 = alloca %struct.inode*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  store %struct.xattr_handler* %0, %struct.xattr_handler** %8, align 8
  store %struct.dentry* %1, %struct.dentry** %9, align 8
  store %struct.inode* %2, %struct.inode** %10, align 8
  store i8* %3, i8** %11, align 8
  store i8* %4, i8** %12, align 8
  store i64 %5, i64* %13, align 8
  store i32 %6, i32* %14, align 4
  %15 = load %struct.xattr_handler*, %struct.xattr_handler** %8, align 8
  %16 = load i8*, i8** %11, align 8
  %17 = call i8* @xattr_full_name(%struct.xattr_handler* %15, i8* %16)
  store i8* %17, i8** %11, align 8
  %18 = load %struct.inode*, %struct.inode** %10, align 8
  %19 = load i8*, i8** %11, align 8
  %20 = load i8*, i8** %12, align 8
  %21 = load i64, i64* %13, align 8
  %22 = load i32, i32* %14, align 4
  %23 = call i32 @btrfs_setxattr_trans(%struct.inode* %18, i8* %19, i8* %20, i64 %21, i32 %22)
  ret i32 %23
}

declare dso_local i8* @xattr_full_name(%struct.xattr_handler*, i8*) #1

declare dso_local i32 @btrfs_setxattr_trans(%struct.inode*, i8*, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
